Regression: Crash when recursively nesting NLA meta strips #98700

Closed
opened 2022-06-08 23:37:41 +02:00 by RedMser · 15 comments
Contributor

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09

Blender Version
Broken: version 3.2.0 stable, version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: 173a15bcda
Worked: 2.93.9 (I don't have other versions available to test right now)
Crash caused by 63cf0d0890

Short description of error
When creating a meta strip in NLA, which contains another meta strip, Blender crashes.

Exact steps for others to reproduce the error
From this file:
bug_recursivemetanlacrash.blend
Combine the first two strips into a meta (ctrl+G), then combine the resulting meta with the third strip (ctrl+G) and observe a crash.

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF707E62A24
Module  : blender.exe
Thread  : 00003218
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.09 **Blender Version** Broken: version 3.2.0 stable, version: 3.3.0 Alpha, branch: master, commit date: 2022-06-07 18:08, hash: `173a15bcda` Worked: 2.93.9 (I don't have other versions available to test right now) Crash caused by 63cf0d0890 **Short description of error** When creating a meta strip in NLA, which contains another meta strip, Blender crashes. **Exact steps for others to reproduce the error** From this file: [bug_recursivemetanlacrash.blend](https://archive.blender.org/developer/F13140614/bug_recursivemetanlacrash.blend) Combine the first two strips into a meta (ctrl+G), then combine the resulting meta with the third strip (ctrl+G) and observe a crash. ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF707E62A24 Module : blender.exe Thread : 00003218 ```
Author
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser

#100288 was marked as duplicate of this issue

#100288 was marked as duplicate of this issue

#98795 was marked as duplicate of this issue

#98795 was marked as duplicate of this issue
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I'm able to repro crash.
Checking...

blender.exe         :0x00007FF7BFD93510  update_active_strip_from_listbase C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:263
blender.exe         :0x00007FF7BFD93510  update_active_strip_from_listbase C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:263
blender.exe         :0x00007FF7BFD908B0  BKE_nla_tracks_copy_from_adt C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:314
blender.exe         :0x00007FF7BFCA8810  BKE_animdata_copy C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\anim_data.c:316
blender.exe         :0x00007FF7BFC65470  BKE_libblock_copy_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\lib_id.c:1263
blender.exe         :0x00007FF7BFC64310  BKE_id_copy_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\lib_id.c:629
blender.exe         :0x00007FF7C002A3B0  blender::deg::`anonymous namespace'::deg_expand_copy_on_write_datablock C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:827
blender.exe         :0x00007FF7C002A880  blender::deg::deg_update_copy_on_write_datablock C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:903
blender.exe         :0x00007FF7C002A350  blender::deg::deg_evaluate_copy_on_write C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:1038
blender.exe         :0x00007FF7C003A1F0  blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:104
blender.exe         :0x00007FF7C003A1A0  blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:116
blender.exe         :0x00007FF7C0BCE8A0  BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:486
blender.exe         :0x00007FF7C0039D20  blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:378
blender.exe         :0x00007FF7BFC6B2A0  scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2597
blender.exe         :0x00007FF7BFBB4450  wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:646
blender.exe         :0x00007FF7BFB99A90  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:629
blender.exe         :0x00007FF7BFB95210  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552
blender.exe         :0x00007FF7C0CE3114  __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFCB55B7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFCB6862630  RtlUserThreadStart
Thanks for the report. I'm able to repro crash. Checking... ```lines=10 blender.exe :0x00007FF7BFD93510 update_active_strip_from_listbase C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:263 blender.exe :0x00007FF7BFD93510 update_active_strip_from_listbase C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:263 blender.exe :0x00007FF7BFD908B0 BKE_nla_tracks_copy_from_adt C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\nla.c:314 blender.exe :0x00007FF7BFCA8810 BKE_animdata_copy C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\anim_data.c:316 blender.exe :0x00007FF7BFC65470 BKE_libblock_copy_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\lib_id.c:1263 blender.exe :0x00007FF7BFC64310 BKE_id_copy_ex C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\lib_id.c:629 blender.exe :0x00007FF7C002A3B0 blender::deg::`anonymous namespace'::deg_expand_copy_on_write_datablock C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:827 blender.exe :0x00007FF7C002A880 blender::deg::deg_update_copy_on_write_datablock C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:903 blender.exe :0x00007FF7C002A350 blender::deg::deg_evaluate_copy_on_write C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval_copy_on_write.cc:1038 blender.exe :0x00007FF7C003A1F0 blender::deg::`anonymous namespace'::evaluate_node C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:104 blender.exe :0x00007FF7C003A1A0 blender::deg::`anonymous namespace'::deg_task_run_func C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:116 blender.exe :0x00007FF7C0BCE8A0 BLI_task_pool_work_and_wait C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenlib\intern\task_pool.cc:486 blender.exe :0x00007FF7C0039D20 blender::deg::deg_evaluate_on_refresh C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:378 blender.exe :0x00007FF7BFC6B2A0 scene_graph_update_tagged C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\scene.cc:2597 blender.exe :0x00007FF7BFBB4450 wm_event_do_notifiers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.cc:646 blender.exe :0x00007FF7BFB99A90 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:629 blender.exe :0x00007FF7BFB95210 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:552 blender.exe :0x00007FF7C0CE3114 __scrt_common_main_seh d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFCB55B7020 BaseThreadInitThunk ntdll.dll :0x00007FFCB6862630 RtlUserThreadStart ```
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Introduced in 63cf0d0890
@dr.sybren ^

Introduced in 63cf0d0890 @dr.sybren ^
Pratik Borhade changed title from Crash when recursively nesting NLA meta strips to Regression: Crash when recursively nesting NLA meta strips 2022-06-09 09:35:12 +02:00

Added subscribers: @georgK, @KevinCurry_Unity

Added subscribers: @georgK, @KevinCurry_Unity

This issue was referenced by a8cf65fcd6

This issue was referenced by a8cf65fcd6b0118aedf47bac687e27ae25f377b3

This issue was referenced by 3012eca350

This issue was referenced by 3012eca3503779697208f24d9f0a09494cd51455
Sybren A. Stüvel self-assigned this 2022-06-14 16:25:34 +02:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscriber: @AdamJanz

Added subscriber: @AdamJanz
Member

Added subscriber: @olliebarbs

Added subscriber: @olliebarbs
Member

Added subscriber: @BClark

Added subscriber: @BClark
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98700
No description provided.